--- a/products.html
+++ b/products.html
@@ -15,7 +15,9 @@
                 <!--NAV-->
                 <title>DECAPOD</title>
                 <section class="logo-container">
-                    <img class="logo" src="media/logo.svg">
+                    <a href="index.html">
+                        <img class="logo" src="media/logo.svg">
+                    </a>
                     <a href="index.html" class="decapod" style="color: #233866;">DECAPOD</a>
                     <a href="index.html" class="slogan" href="#index" style="color: #233866;">Feeding the World Sustainably</a>
                 </section>
@@ -85,3 +87,23 @@
             </section>
         </section>
     </body>
+
+<style>
+    .background-products{
+    background-color: var(--backgroundgrey);
+}
+.timeline-container{
+    position: static;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+.timeline{
+    width: 100%;
+}
+.crabonplate{
+    width:80%;
+    transform: translateY(-10rem);
+}
+</style>
