--- a/team.html
+++ b/team.html
@@ -13,7 +13,9 @@
                 <!--NAV-->
                 <title>DECAPOD</title>
                 <section class="logo-container">
-                    <img class="logo" src="media/logo.svg">
+                    <a href="index.html">
+                        <img class="logo" src="media/logo.svg">
+                    </a>
                     <a href="index.html" class="decapod">DECAPOD</a>
                     <a href="index.html" class="slogan" href="#index">Feeding the World Sustainably</a>
                 </section>
@@ -78,7 +80,7 @@
             <div style="display: grid; grid-template-columns: repeat(3, 1fr);gap: 0% 5%; margin: 8%; text-align: justify; font-size: 1.5rem; margin-top: 0; margin-bottom: 0;">
                 <p>Kjell is educated as a state authorized accountant with a degree from the Norwegian School of Economics. He has over 30 years' experience in corporate finance as a business risk manager, consultant, M&A manager, and has notably spent 10 years as partner at EY. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos quam magni adipisci tenetur laudantium facilis excepturi laboriosam quo sit modi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel perferendis et quasi sunt laborum magnam nisi aliquid autem dolorem sapiente! lorem20</p>
                 <p>Egil has a M.Sc in international business and over 30 years of experience in managerial roles. This includes having been a supply chain accountant, sales manager at Hydro Aluminium, CEO at Norsk Privatøkonomi, CFO at Bauer hydrolics, supply chain manager at Imenco group, and holding numerous board positions. After seeing the potential in the crab autofeed technology Jan Roar had invented, the two of them founded Decapod in 2018 with Egil taking charge of administrative and managerial responisbilities allowing Jan Roar to focus on further developing our technologies.</p>
-                <p>Folke is the newest and youngest memer of Decapods' team. Folke has had a lifelong love for the sea and crab fishing. This, along with his ambition and broad skillset has made him a good match for Decapod at this stage of our growth. Folke was taking a bachelor's in business at NHH before joining Decapod. He also has experience as a financial controller, board member in a capital asset management firm, & and as CEO of his own investment vehicle, Currently, Folke is primarily responsible for web design, development, and media production but also takes on offhand tasks.</p>
+                <p>Folke is the newest and youngest member of Decapods' team. Folke has had a lifelong love for the sea and crab fishing. This, along with his ambition and broad skillset has made him a good match for Decapod at this stage of our growth. Folke was taking a bachelor's in business at NHH before joining Decapod. He also has experience as a financial controller, board member in a capital asset management firm, & and as CEO of his own investment vehicle, Currently, Folke is primarily responsible for web design, development, and media production but also takes on offhand tasks.</p>
             </div>
         </section>
         <!--FOOTER-->
@@ -108,3 +110,27 @@
         </section>
     </body>
 </html>
+
+<style>
+    .background-team{
+    height: 100vh;
+    background-image: url(media/janroar.png);
+    background-size: cover;
+    background-position: bottom;
+    background-repeat:no-repeat;
+}
+.header-team-container{
+    margin-left:auto;
+    margin-right:auto;
+    width: 50%;
+    transform: translateY(12rem);
+}
+.header-team{
+    color: var(--backgroundgrey); 
+    font-size: 75px;
+    font-family: essonnes-text;
+    text-align: center;
+    text-shadow:  -4px 4px 3px #2b2b2b;
+    margin: 0;
+}
+</style>
