--- a/instructions-singaporecrab.html
+++ b/instructions-singaporecrab.html
@@ -15,7 +15,9 @@
                 <!--NAV-->
                 <title>DECAPOD</title>
                 <section class="logo-container">
-                  <img class="logo" src="media/logo.svg">
+                  <a href="index.html">
+                    <img class="logo" src="media/logo.svg">
+                  </a>
                   <a href="index.html" class="decapod" style="color: #233866;">DECAPOD</a>
                   <a href="index.html" class="slogan" href="#index" style="color: #233866;">Feeding the World Sustainably</a>
               </section>
