--- a/recipes.html
+++ b/recipes.html
@@ -15,7 +15,9 @@
                 <!--NAV-->
                 <title>DECAPOD</title>
                 <section class="logo-container">
-                    <img class="logo" src="media/logo.svg">
+                    <a href="index.html">
+                        <img class="logo" src="media/logo.svg">
+                    </a>
                     <a href="index.html" class="decapod">DECAPOD</a>
                     <a href="index.html" class="slogan" href="#index">Feeding the World Sustainably</a>
                 </section>
@@ -112,5 +114,105 @@
 </html>
 
 <style>
-    
+    .link{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+.arrow{
+    position: absolute;
+    bottom: 25px;
+    width: 0%;
+    height: 6px;
+    left: 43%;
+    background-color: #fff;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+    animation: arrow 700ms linear infinite;
+}
+.card{
+    color:#ffffff;
+    background-size: cover;
+    padding: 10rem;
+    width: 35ch;
+    height: 35ch;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    transition: transform 500ms ease;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10rem;
+    margin-bottom: 5rem;
+}
+.card1{
+    background-image: url(media/singaporecrab.jpg);
+}
+.card2{
+    background-image: url(media/sushi.jpg);
+}
+.card3{
+    background-image: url(media/avocadocrabboats.jpg);
+
+}
+.card:hover {
+    transform:scale(1.05);
+}
+.card-content{
+    width: 38rem;
+    height: 35rem;
+    background: rgba(24, 151, 204, 0.65);
+    transition: transform 500ms ease; 
+    transform: translate(-10rem, 21.5rem);
+}
+.card:hover .card-content {
+    transform: translate(-10rem, 13rem);
+}
+.card-title {
+    position: relative;
+    width: 18rem;
+    margin-left: auto;
+    margin-right: auto;
+    transform: translateY(0.4rem);
+    text-align: center;
+}
+.card-title::after {
+    content:"";
+    position: absolute;
+    height: 4px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+.card:hover .card-title::after {
+    transform:scaleX(1);
+}
+.card-body{
+    color: rgb(255 255 255 / 0.85);
+    margin-left:auto;
+    margin-right:auto;
+    text-align: center;
+}
+.card-recipe{
+    margin-left:auto;
+    margin-right: auto;
+    width: 80%;
+    display: grid; 
+    grid-template-columns: 1.3fr 0.7fr; 
+    grid-template-rows: 0.2fr 1.8fr; 
+    gap: 0px 10%; 
+    grid-template-areas: 
+        ". ."
+        ". ."; 
+}
+.background-recipes{
+    height: 100vh;
+    background-image: url(media/chef.jpg);
+    background-size: cover;
+    position: static;
+    background-position: bottom;
+    background-repeat:no-repeat;
+}
 </style>
