--- a/team.html
+++ b/team.html
@@ -59,7 +59,7 @@
             <p style="font-weight: bold;">jan.storesund@decapod.no</p>
         </div>
         <!--TEAM-->
-        <section class="team" style="transform:translateY(-150%)">
+        <section class="team" style="transform:translateY(50%)">
             <div style="display: flex; justify-content: space-evenly; margin-bottom: 0;">
                 <img class="portrait" src="media/Kjell.png">
                 <img class="portrait" src="media/egil.png">
@@ -112,7 +112,7 @@
 <style>
     .background-team{
     height: 100vh;
-    background-image: url(media/janroar.png);
+    background-image: url(media/A2F19867-89E1-4BF9-8269-C5507CFBFCC7.png);
     background-size: cover;
     background-position: bottom;
     background-repeat:no-repeat;
