--- a/team.html
+++ b/team.html
@@ -114,7 +114,7 @@
     height: 100vh;
     background-image: url(media/A2F19867-89E1-4BF9-8269-C5507CFBFCC7.png);
     background-size: cover;
-    background-position: bottom;
+    background-position: top;
     background-repeat:no-repeat;
 }
 .header-team-container{
