--- a/products.html
+++ b/products.html
@@ -90,9 +90,10 @@
 
 <style>
     .background-products{
-    background-color: var(--backgroundgrey);
+    background-image: url(media/3EF24E78-E356-4DA6-BC2D-8E95180411CC.png");
+    background-position: cover;
 }
-.timeline-container{
+/* .timeline-container{
     position: static;
     width: 100%;
     margin-left: auto;
@@ -106,4 +107,5 @@
     width:80%;
     transform: translateY(10rem);
 }
+    */
 </style>
