--- a/products.html
+++ b/products.html
@@ -90,7 +90,7 @@
 
 <style>
     .background-products{
-    background-image: url(media/3EF24E78-E356-4DA6-BC2D-8E95180411CC.png");
+    background-image: url(media/C4C67185-3589-44D7-B67E-183F6B036323.png);
     background-position: cover;
 }
 /* .timeline-container{
