--- a/products.html
+++ b/products.html
@@ -91,7 +91,10 @@
 <style>
     .background-products{
     background-image: url(media/C4C67185-3589-44D7-B67E-183F6B036323.png);
-    background-position: cover;
+    background-position: top;
+    background-siz: cover;
+    height: 300rem;
+    
 }
 /* .timeline-container{
     position: static;
