--- a/products.html
+++ b/products.html
@@ -61,7 +61,7 @@
             </section>
 
         </head>
-        <section class="footer" style="background: linear-gradient(#f9f9f9, #1897cc);transform: translateY(160rem);">
+        <section class="footer" style="background: linear-gradient(#f9f9f9, #1897cc);transform: translateY(260rem);">
             <section class="footer-container">
                 <section class="footer-container-text" >
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(-0.6rem);">
@@ -92,7 +92,7 @@
     .background-products{
     background-image: url(media/C4C67185-3589-44D7-B67E-183F6B036323.png);
     background-position: top;
-    background-siz: cover;
+    background-size: cover;
     height: 300rem;
     
 }
