--- a/products.html
+++ b/products.html
@@ -92,7 +92,7 @@
     .background-products{
     background-image: url(media/C4C67185-3589-44D7-B67E-183F6B036323.png);
     background-position: top;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     height: 300rem;
     
