--- a/products.html
+++ b/products.html
@@ -56,7 +56,6 @@
                 </div>
             </section>
             <section class="title">
-                    <img class="title-logo" src="media/logo.svg" alt="logo">
                     <svg width="195" height="27" viewBox="0 0 195 27" fill="none" xmlns="http://www.w3.org/2000/svg">
 <mask id="path-1-outside-1" maskUnits="userSpaceOnUse" x="0.259998" y="0.0999985" width="195" height="27" fill="black">
 <rect fill="white" x="0.259998" y="0.0999985" width="195" height="27"/>
@@ -144,19 +143,12 @@
     height: 300rem;
     
 }
-/* .timeline-container{
-    position: static;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
-.timeline{
-    width: 100%;
-}
-.crabonplate{
-    width:80%;
-    transform: translateY(10rem);
-}
-    */
+.title {
+        position: absolute;
+        margin: 0;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -150%);
+        transform: translate(-50%, -150%);
+    }
 </style>
