--- a/products.html
+++ b/products.html
@@ -101,10 +101,7 @@
                     }, false);
                     </script>                         
                 </section>
-            <section class="timeline-container">
-               
                 <img class="crabonplate" src="media/crabonplate.png">
-            </section>
 
         </head>
         <section class="footer" style="background: linear-gradient(#f9f9f9, #1897cc);transform: translateY(200rem);">
@@ -150,5 +147,10 @@
         left: 50%;
         -ms-transform: translate(-50%, -150%);
         transform: translate(-50%, -150%);
+    }
+ .crabonplate {
+     position: relative;
+     top: 10rem;
+     width: 65%;
     }
 </style>
