--- a/products.html
+++ b/products.html
@@ -150,7 +150,9 @@
     }
  .crabonplate {
      position: relative;
-     top: 10rem;
+     transform: translateY(150rem);
      width: 65%;
+     margin-left: auto;
+     margin-right: auto;
     }
 </style>
