--- a/products.html
+++ b/products.html
@@ -137,7 +137,7 @@
         background-position: top;
         background-size: contain;
         background-repeat: no-repeat;
-        height: 150rem;
+        height: 140rem;
     }
     .title {
         position: absolute;
@@ -149,7 +149,9 @@
     }
      .crabonplate {
          width: 70%;
-         margin-left: auto;
-         margin-right: auto;
-        }
+         margin: 0;
+         top: 50%;
+         left: 50%;
+         -ms-transform: translate(-50%, -150%);
+        transform: translate(-50%, -150%);
 </style>
