--- a/products.html
+++ b/products.html
@@ -148,10 +148,8 @@
         transform: translate(-50%, -150%);
     }
      .crabonplate {
+         position: relative;
          width: 70%;
-         margin: 0;
-         top: 50%;
-         left: 50%;
-         -ms-transform: translate(-50%, -150%);
-        transform: translate(-50%, -150%);
+         margin-left: 50%;
+         margin-right: 50%;
 </style>
