--- a/products.html
+++ b/products.html
@@ -150,6 +150,7 @@
      .crabonplate {
          position: relative;
          width: 70%;
+         margin-top: 0;
          margin-left: 50%;
          margin-right: 50%;
 </style>
