--- a/products.html
+++ b/products.html
@@ -151,6 +151,6 @@
          position: relative;
          width: 70%;
          margin-top: 0;
-         margin-left: 50%;
-         margin-right: 50%;
+         margin-left: auto;
+         margin-right: auto;
 </style>
