--- a/products.html
+++ b/products.html
@@ -101,7 +101,9 @@
                     }, false);
                     </script>                         
                 </section>
-                <img class="crabonplate" src="media/crabonplate.png">
+                <section class="crabonplate-container">
+                    <img class="crabonplate" src="media/crabonplate.png">
+                </section>
 
         </head>
         <section class="footer" style="background: linear-gradient(#f9f9f9, #1897cc);transform: translateY(200rem);">
@@ -162,10 +164,12 @@
             fill: white;
         }
     }
+    .crabonplate-container {
      .crabonplate {
          position: relative;
          width: 70%;
          margin-top: 0;
          margin-left: auto;
          margin-right: auto;
+     }
 </style>
