--- a/products.html
+++ b/products.html
@@ -150,6 +150,7 @@
         transform: translate(-50%, -150%);
     }
     #logo {
+        transformY: translate(-10%);
     }
     @keyframes line-anim {
         to{
