--- a/products.html
+++ b/products.html
@@ -151,6 +151,7 @@
     }
     #logo {
         transformY: translate(-10%);
+        animation: fill 0.5s ease forwards 3.5s;
     }
     @keyframes line-anim {
         to{
