--- a/products.html
+++ b/products.html
@@ -166,6 +166,9 @@
             fill: white;
         }
     }
+    .crabonplate-container {
+         align-items: center;
+     }
      .crabonplate {
          position: relative;
          width: 60%;
