--- a/products.html
+++ b/products.html
@@ -167,6 +167,7 @@
         }
     }
     .crabonplate-container {
+         display: flex;
          align-items: center;
      }
      .crabonplate {
