--- a/products.html
+++ b/products.html
@@ -106,7 +106,7 @@
                 </section>
 
         </head>
-        <section class="footer" style="background: linear-gradient(#f9f9f9, #1897cc);transform: translateY(120rem);">
+        <section class="footer" style="background: linear-gradient(#f9f9f9, #1897cc);transform: translateY(155rem);">
             <section class="footer-container">
                 <section class="footer-container-text" >
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(-0.6rem);">
@@ -140,6 +140,7 @@
         background-size: contain;
         background-repeat: no-repeat;
         height: 148rem;
+        margin-bottom: 0;
     }
     .title {
         position: absolute;
@@ -150,7 +151,6 @@
         transform: translate(-50%, -150%);
     }
     #logo {
-        transformY: translate(-45%);
         animation: fill 0.5s ease forwards 3.5s;
     }
     @keyframes line-anim {
@@ -169,6 +169,7 @@
     .crabonplate-container {
          display: flex;
          align-items: center;
+         margin-top: 0;
      }
      .crabonplate {
          position: relative;
