--- a/products.html
+++ b/products.html
@@ -170,6 +170,7 @@
          display: flex;
          align-items: center;
          margin-top: 0;
+         transformY: translate(-10rem);
      }
      .crabonplate {
          position: relative;
