--- a/products.html
+++ b/products.html
@@ -171,7 +171,7 @@
          display: flex;
          align-items: center;
          margin-top: 0;
-         transformY: translate(-40rem);
+         transformY: translateY(-10rem);
      }
      .crabonplate {
          position: relative;
