--- a/products.html
+++ b/products.html
@@ -151,7 +151,7 @@
         transform: translate(-50%, -150%);
     }
     #logo {
-        transform: translateY(-45%);
+        transform: translateY(5rem);
         animation: fill 0.5s ease forwards 3.5s;
     }
     @keyframes line-anim {
