--- a/products.html
+++ b/products.html
@@ -18,13 +18,13 @@
                     <a href="index.html">
                         <img class="logo" src="media/logo.svg">
                     </a>
-                    <a href="index.html" class="decapod" style="color: #233866;">DECAPOD</a>
-                    <a href="index.html" class="slogan" href="#index" style="color: #233866;">Feeding the World Sustainably</a>
+                    <a href="index.html" class="decapod" style="color: #f9f9f9;">DECAPOD</a>
+                    <a href="index.html" class="slogan" href="#index" style="color: #f9f9f9;">Feeding the World Sustainably</a>
                 </section>
                 <section class="nav-container">
                     <style>
                         nav a {
-                            color: black;
+                            color: #f9f9f9;
                         }
                     </style>
                     <nav>
@@ -32,7 +32,6 @@
                         <a href="products.html">PRODUCTS</a>
                         <a href="team.html">OUR TEAM</a>
                         <a href="recipes.html">RECIPES</a>
-                        
                         <a href="sustainability.html">SUSTAINABILITY</a>
                     </nav>
                 </section>
@@ -47,7 +46,6 @@
                                     <li><a href="products.html">PRODUCTS</a></li>
                                     <li><a href="team.html">OUR TEAM</a></li>
                                     <li><a href="recipes.html">RECIPES</a></li>
-                                   
                                     <li><a href="sustainability.html">SUSTAINABILITY</a></li>
                                 </ul>
                             </div>
