--- a/products.html
+++ b/products.html
@@ -149,6 +149,7 @@
         transform: translate(-50%, -150%);
     }
     #logo {
+        position: absolute;
         transform: translateY(5rem);
         animation: fill 0.5s ease forwards 3.5s;
     }
