--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
     #logo {
     position: absolute;
     transform: translate(-45%, 10%);
+    animation: fill 0.5s ease forwards 3.5s;
     }
     @keyframes line-anim {
         to{
