--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <section class="title">
                     <img class="title-logo" src="media/logo.svg" alt="logo">
                     <svg id="logo" width="850" height="105" viewBox="0 0 458 56" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <mask id="path-1-outside-1" maskUnits="userSpaceOnUse" x="0.919998" y="0.219999" width="457" height="34">
+                        <mask id="path-1-outside-1" maskUnits="userSpaceOnUse" x="0.919998" y="0.219999" width="457" height="34" fill="black">
                         <rect x="0.919998" y="0.219999" width="457" height="34"/>
                         <path d="M2.92 4.05V24H7.21V15.87H14.62V12.12H7.21V7.8H16.12V4.05H2.92Z"/>
                         <path d="M26.0912 24.45C29.1512 24.45 31.2512 23.07 31.5812 22.77L30.3812 20.01C29.5712 20.58 28.2512 21.3 26.6312 21.3C24.3812 21.3 23.3912 19.77 23.2112 18.15C26.4512 18.03 31.4312 17.25 31.4312 12.75C31.4312 9.87 29.4812 8.34 26.4512 8.34C21.5312 8.34 18.9512 12.36 18.9512 16.77C18.9512 21.27 21.0212 24.45 26.0912 24.45ZM23.0612 15.33C23.1512 13.17 24.2012 11.31 26.2112 11.31C27.1412 11.31 27.7412 11.88 27.7412 12.84C27.7412 14.79 24.6812 15.3 23.0612 15.33Z"/>
