--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <section class="title">
                     <img class="title-logo" src="media/logo.svg" alt="logo">
                     <svg id="logo" width="850" height="105" viewBox="0 0 458 56" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <mask id="path-1-outside-1" maskUnits="userSpaceOnUse" x="0.919998" y="0.219999" width="457" height="34" fill="black">
-                        <rect x="0.919998" y="0.219999" width="457" height="34"/>
+                        <mask id="path-1-outside-1" maskUnits="userSpaceOnUse" x="0.919998" y="0.219999" width="457" height="34">
+                        <rect fill="white" x="0.919998" y="0.219999" width="457" height="34"/>
                         <path d="M2.92 4.05V24H7.21V15.87H14.62V12.12H7.21V7.8H16.12V4.05H2.92Z"/>
                         <path d="M26.0912 24.45C29.1512 24.45 31.2512 23.07 31.5812 22.77L30.3812 20.01C29.5712 20.58 28.2512 21.3 26.6312 21.3C24.3812 21.3 23.3912 19.77 23.2112 18.15C26.4512 18.03 31.4312 17.25 31.4312 12.75C31.4312 9.87 29.4812 8.34 26.4512 8.34C21.5312 8.34 18.9512 12.36 18.9512 16.77C18.9512 21.27 21.0212 24.45 26.0912 24.45ZM23.0612 15.33C23.1512 13.17 24.2012 11.31 26.2112 11.31C27.1412 11.31 27.7412 11.88 27.7412 12.84C27.7412 14.79 24.6812 15.3 23.0612 15.33Z"/>
                         <path d="M42.6416 24.45C45.7016 24.45 47.8016 23.07 48.1316 22.77L46.9316 20.01C46.1216 20.58 44.8016 21.3 43.1816 21.3C40.9316 21.3 39.9416 19.77 39.7616 18.15C43.0016 18.03 47.9816 17.25 47.9816 12.75C47.9816 9.87 46.0316 8.34 43.0016 8.34C38.0816 8.34 35.5016 12.36 35.5016 16.77C35.5016 21.27 37.5716 24.45 42.6416 24.45ZM39.6116 15.33C39.7016 13.17 40.7516 11.31 42.7616 11.31C43.6916 11.31 44.2916 11.88 44.2916 12.84C44.2916 14.79 41.2316 15.3 39.6116 15.33Z"/>
