--- a/team.html
+++ b/team.html
@@ -92,7 +92,7 @@
     
         <!--ABOUT JAN ROAR-->
         <section class="about">
-            <div style="font-size: 1.5rem; text-align: justify; text-align-last: center; margin:auto; width; 60%; margin-top: 0;">
+            <div style="font-size: 1.5rem; text-align: justify; text-align-last: center; margin:auto; width: 60%; margin-top: 0;">
                 <p>Born and raised on the Norwegian island Karmøy, Jan Roar has always been close to the sea. Ever since childhood he took a particular interest for crabs. After spending the early days of his education and career as a mechanic, Jan Roar started designing and devloping machinery for the industrial production of crab - something he has now been doing for 33 years. Jan Roar is the inventor of all of MS-Solutions’ crab handling technologies and is thereby the most essential member of our team. .</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dicta tempore dolor debitis at provident sed ipsa recusandae quos minima itaque harum animi, numquam exercitationem. Magnam repellat beatae modi dignissimos quam quia illum voluptas quis perspiciatis facere nihil vitae dicta praesentium fugiat eligendi sapiente magni tempore dolorem ut, ex qui accusantium tempora repellendus possimus. Nam fuga laborum recusandae accusamus magni!</p>
                 <p style="font-weight: bold;">jan.storesund@decapod.no</p>
