--- a/team.html
+++ b/team.html
@@ -156,6 +156,7 @@
     background-size: cover;
     background-position: top;
     background-repeat:no-repeat;
+    margin-bottom: 0;
 }
  .title {
         position: absolute;
