--- a/team.html
+++ b/team.html
@@ -154,7 +154,7 @@
     height: 100vh;
     background-image: url(media/A2F19867-89E1-4BF9-8269-C5507CFBFCC7.png);
     background-size: cover;
-    background-position: top;
+    background-position: bottom;
     background-repeat:no-repeat;
     margin-bottom: 0;
 }
