--- a/team.html
+++ b/team.html
@@ -152,7 +152,7 @@
 <style>
     .background-team{
     height: 100vh;
-    background-image: url(media/A2F19867-89E1-4BF9-8269-C5507CFBFCC7.png);
+    background-image: url(66E816F5-45CF-4085-924B-17E7D309F781.jpeg);
     background-size: cover;
     background-position: bottom;
     background-repeat:no-repeat;
