--- a/team.html
+++ b/team.html
@@ -86,6 +86,24 @@
                     }, false);
                     </script>    
                 </section>
+                <section class="scroll">
+                    <span class="scroll-icon">
+                        <span class="scroll-icon-dot">
+                        </span>
+                    </span>
+                </section>
+                <script>
+                    const checkpoint = 450;
+                        window.addEventListener("scroll", () => {
+                        const currentScroll = window.pageYOffset;
+                        if (currentScroll <= checkpoint) {
+                            opacity = 1 - currentScroll / checkpoint;
+                        } else {
+                            opacity = 0;
+                        }
+                        document.querySelector(".scroll").style.opacity = opacity;
+                        });
+                </script>
             </section> 
         </head>
 
@@ -190,6 +208,34 @@
     .title-title {
         stroke-dasharray: 200;
         transform: translateX(10rem);
+    }
+    .scroll {
+      position: absolute;
+      left: 50%;
+      bottom: 2rem;
+      transform: translateX(-50%);
+    }
+    .scroll-icon {
+        display: block;
+        position: relative;
+        height: 3em;
+        width: 1.5em;
+        border: .25em solid #fff;
+        border-radius: 1em;
+    }
+    .scroll-icon-dot {
+        display: block;
+        position: absolute;
+        left: 50%;
+        background: #fff;
+        height: .5em;
+        width: .5em;
+        top: .6em;
+        margin-left: -.25em;
+        border-radius: 50%;
+        transform-origin: top center;
+        backface-visibility: hidden;
+        animation: scroll 2s ease-out infinite;
     }
     .about {
         height: 30rem;
