--- a/recipes.html
+++ b/recipes.html
@@ -91,8 +91,8 @@
                         });
                 </script>
         </head>
-        <section class="card card1" style="background: linear-gradient: (#63616b, #f9f9f9)>
-            <section class="card-content" >
+        <section class="card card1" style="background: linear-gradient: (#63616b, #f9f9f9);">
+            <section class="card-content">
                 <h2 class="card-title">Singapore Crab</h2>
                 <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
             </section>
