--- a/recipes.html
+++ b/recipes.html
@@ -91,15 +91,17 @@
                         });
                 </script>
         </head>
-        <section class="card card1" style="background: linear-gradient(#63616b, #f9f9f9 50%, #f9f9f9);">
-            <section class="card-content">
-                <h2 class="card-title">Singapore Crab</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
+        <section style="background: linear-gradient(#63616b, #f9f9f9 50%, #f9f9f9);">
+            <section class="card card1">
+                <section class="card-content">
+                    <h2 class="card-title">Singapore Crab</h2>
+                    <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
+                </section>
+                <div class="arrow"></div>
+                <a href="instructions-singaporecrab.html">
+                    <span class="link"></span>
+                </a>
             </section>
-            <div class="arrow"></div>
-            <a href="instructions-singaporecrab.html">
-                <span class="link"></span>
-            </a>
         </section>
         <section class="card card2">
             <section class="card-content">
