--- a/recipes.html
+++ b/recipes.html
@@ -253,20 +253,17 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0;
+    margin-top: 10rem;
     margin-bottom: 5rem;
 }
 .card1{
     background-image: url(media/singaporecrab.jpg);
-    transform: translateY(10rem);
 }
 .card2{
     background-image: url(media/sushi.jpg);
-    transform: translateY(10rem);
 }
 .card3{
     background-image: url(media/avocadocrabboats.jpg);
-    transform: translateY(10rem);
 }
 .card:hover {
     transform:scale(1.05);
